--- a/.gitpod/Dockerfile
+++ b/.gitpod/Dockerfile
@@ -1,8 +1,16 @@
-FROM gitpod/workspace-postgres
+FROM elixir:1.14.3
 
-USER root
+RUN apt-get update && apt-get install -yq \
+    git \
+    git-lfs \
+    sudo \
+    && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/*
 
-ENV DEBIAN_FRONTEND noninteractive
+RUN useradd -l -u 33333 -G sudo -md /home/gitpod -s /bin/bash -p gitpod gitpod
+
+USER gitpod
+
+#ENV DEBIAN_FRONTEND noninteractive
 
 #RUN wget https://packages.erlang-solutions.com/erlang-solutions_2.0_all.deb \
 #    && dpkg -i erlang-solutions_2.0_all.deb \
